--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.8",
     "@toolpad/core": "^0.10.0",
+    "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "font-awesome": "^4.7.0",
