--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.8",
+    "@reduxjs/toolkit": "^2.4.0",
     "@toolpad/core": "^0.10.0",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
@@ -23,8 +24,11 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
+    "recharts": "^2.14.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
